# AudioViz

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: ensure-rust.mjs  prepare-sidecar.mjs  run-tauri-build.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  main.rs  presets.rs
src/ui/: App.tsx  styles.css
src/ui/components/: AudioPicker.tsx  ExportPanel.tsx  PreviewCanvas.tsx  SettingsPanel.tsx
src/ui/export/: exportClient.ts
src/ui/state/: presets.ts  store.ts  types.ts
src/visualizer/: loadLogo.ts  offlineFftTimeline.ts  previewAudioGraph.ts  renderFrame.ts
