[package]
name = "audioviz"
version = "0.1.0"
description = "AudioViz - local audio visualizer exporter"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4"] }
tauri-plugin-dialog = "2.7.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

